# simple-api

./: .gitignore  MANIFEST.in  Readme.md  pyproject.toml  setup.py  setupv2.py  test.py
simple_api/: __init__.py  core.py  decorators.py  server.py
simple_api.egg-info/: PKG-INFO  SOURCES.txt
